# rust-in-action

./: .gitignore  README.md
1_minigrep/: Cargo.toml
1_minigrep/src/: lib.rs  main.rs
2_url_shortener/: .env  Cargo.toml  Rocket.toml  urls.sqlite
2_url_shortener/src/: database.rs  main.rs
2_url_shortener/src/database/: requests.rs  responses.rs
2_url_shortener/test/: add_redirection_command.txt  delete_redirection_command.txt
3_textual_adventure/: Cargo.toml  README.md
3_textual_adventure/src/: inventory.rs  main.rs  state.rs
4_rustymon/: Cargo.toml
4_rustymon/src/: main.rs
